exception handling + jwt token